[package]
name = "dota-gsi"
version = "0.2.2"
authors = ["Tomas Farias <tomas@tomasfarias.dev>"]
edition = "2024"
description = "Game State Integration with Dota 2 in rust. Provides a server that listens for JSON events sent by Dota 2."
readme = "README.md"
repository = "https://github.com/tomasfarias/dota-gsi"
license-file = "LICENSE"
keywords = ["dota"]


[lib]
name = "dota"
path = "src/lib.rs"

[[bin]]
name = "echoslam"
path = "src/bin/echoslam.rs"

[[bin]]
name = "recall"
path = "src/bin/recall.rs"


[dependencies]
async-trait = "^0.1.70"
bytes = "1"
chrono = "^0.4"
clap = { version = "^4.5", features = ["derive"] }
env_logger = "^0.10"
httparse = "^1.10"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^2.0"
tokio = { version = "1", features = ["net", "rt", "macros", "rt-multi-thread", "io-util", "fs", "sync"] }
