[package]
name = "dota-gsi"
version = "0.2.2"
authors = ["Tomas Farias <tomas@tomasfarias.dev>"]
edition = "2024"
description = "Game State Integration with Dota 2 in rust. Provides a server that listens for JSON events sent by Dota 2."
readme = "README.md"
repository = "https://github.com/tomasfarias/dota-gsi"
license-file = "LICENSE"
keywords = ["dota"]


[lib]
name = "dota"
path = "src/lib.rs"

[[bin]]
name = "echoslam"
path = "src/bin/echoslam.rs"
required-features = ["clap", "env_logger"]

[[bin]]
name = "recall"
path = "src/bin/recall.rs"
required-features = ["clap", "env_logger"]


[dependencies]
async-trait = "^0.1.89"
bytes = "1"
chrono = "^0.4"
clap = { version = "^4.5", features = ["derive"], optional = true }
env_logger = { version = "^0.10", optional = true }
httparse = "^1.10"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^2.0"
tokio = { version = "1", features = ["net", "rt", "macros", "rt-multi-thread", "io-util", "fs", "sync"] }


[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["net", "rt", "macros", "rt-multi-thread", "io-util", "fs", "sync", "time"] }
