[package]
name = "dota-gsi"
version = "0.4.0"
authors = ["Tomas Farias <tomas@tomasfarias.dev>"]
edition = "2024"
description = "Game State Integration with Dota 2 in Rust. Provides a server that listens for events sent by Dota 2."
readme = "README.md"
repository = "https://github.com/tomasfarias/dota-gsi"
license = "MIT"
keywords = ["dota", "game-state"]


[lib]
name = "dota"
path = "src/lib.rs"

[[example]]
name = "echoslam"
required-features = ["handlers"]

[[example]]
name = "recall"
required-features = ["models"]

[dependencies]
anyhow = "^1.0.100"
async-trait = "^0.1.89"
bytes = "1"
chrono = "^0.4"
futures = { version = "0.3" }
httparse = "^1.10"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^2.0"
tokio = { version = "1", features = ["net", "rt", "macros", "rt-multi-thread", "io-util", "fs", "sync"] }


[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["net", "rt", "macros", "rt-multi-thread", "io-util", "fs", "sync", "time"] }
clap = { version = "^4.5", features = ["derive"] }
env_logger = { version = "^0.10" }


[features]
handlers = []
models = []
